--- a/templates/register.html
+++ b/templates/register.html
@@ -7,22 +7,61 @@
                 <legend class="border-botto,-mb-4">Join Today</legend>
                 <div class="form-group">
                     {{ form.username.label(class="form-control-label")}}
-                    {{ form.username(class="form-control form-control-log")}}
+
+                    {% if form.username.errors %}
+                    {{ form.username(class="form-control form-control-lg is-invalid")}}
+                    <div class="invalid-feedback">
+                        {%for error in form.username.errors %}
+                            <span>{{ error }}</span>
+                        {% endfor %}
+                    </div>
+                    {% else %}
+                        {{ form.username(class="form-control form-control-lg")}}
+                    {% endif %}
+                    
+                    
                 </div>
 
                 <div class="form-group">
                     {{ form.email.label(class="form-control-label")}}
-                    {{ form.email(class="form-control form-control-log")}}
+                    {% if form.email.errors %}
+                    {{ form.email(class="form-control form-control-lg is-invalid")}}
+                    <div class="invalid-feedback">
+                        {%for error in form.email.errors %}
+                            <span>{{ error }}</span>
+                        {% endfor %}
+                    </div>
+                    {% else %}
+                        {{ form.email(class="form-control form-control-lg")}}
+                    {% endif %}
                 </div>
 
                 <div class="form-group">
                     {{ form.password.label(class="form-control-label")}}
-                    {{ form.password(class="form-control form-control-log")}}
+                    {% if form.password.errors %}
+                    {{ form.password(class="form-control form-control-lg is-invalid")}}
+                    <div class="invalid-feedback">
+                        {%for error in form.password.errors %}
+                            <span>{{ error }}</span>
+                        {% endfor %}
+                    </div>
+                    {% else %}
+                        {{ form.password(class="form-control form-control-lg")}}
+                    {% endif %}
                 </div>
 
                 <div class="form-group">
                     {{ form.confirm_password.label(class="form-control-label")}}
-                    {{ form.confirm_password(class="form-control form-control-log")}}
+                    {% if form.confirm_password.errors %}
+                    {{ form.confirm_password(class="form-control form-control-lg is-invalid")}}
+                    <div class="invalid-feedback">
+                        {%for error in form.confirm_password.errors %}
+                            <span>{{ error }}</span>
+                        {% endfor %}
+                    </div>
+                    {% else %}
+                        {{ form.confirm_password(class="form-control form-control-lg")}}
+                    {% endif %}
                 </div>
             </fieldset>
             <div class="form-group">
